lab-6: add calculator activity done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
     dataBinding {
         enabled = true
     }
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.10.2"
+        }
+    }
 }
 
 dependencies {
