finishing tugas uas tktpl

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,14 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.calculator.CalculatorActivity"></activity>
+        <activity android:name=".ui.splash.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.calculator.CalculatorActivity" />
         <activity android:name=".ui.createTransaction.CreateTransactionActivity" />
         <activity
             android:name=".ui.home.HomeActivity"
@@ -22,10 +31,30 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name=".ui.createAccount.CreateAccountActivity" />
+        <activity android:name=".ui.openGL.OpenGLActivity" />
+
+        <receiver android:name=".util.receiver.ConnectionReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".util.service.ReminderService"
+            android:exported="false" />
+
+        <receiver
+            android:name=".util.receiver.NotificationReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <service
+            android:name=".util.service.NotificationService"
+            android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
